# oneamp

./: ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CHANGELOG_CONSOLIDATED.md  CHANGELOG_v0.10.1.md  CHANGELOG_v0.10.md  CHANGELOG_v0.11.md  CHANGELOG_v0.12.1.md  CHANGELOG_v0.12.md  CHANGELOG_v0.13.0.md  CHANGELOG_v0.13.1.md  CHANGELOG_v0.7.md  CHANGELOG_v0.8.md  CHANGELOG_v0.9.md  Cargo.toml  DESIGN_ANALYSIS.md  DESIGN_COMPARISON.md  EGUI_ADVANCED_CAPABILITIES.md  FIXES_v0.7.1.md  FIXES_v0.7.2.md  NEXT_VISUAL_FEATURES.md  ONEDROP_INTEGRATION_ANALYSIS.md  PHASE2_ANALYSIS.md  README.md  SEEK_IMPLEMENTATION_PLAN.md  SKIN_INTEGRATION_GUIDE.md  SKIN_SYSTEM_ARCHITECTURE.md  SPECIFICATIONS_v0.15.md  TEST_REPORT.md  USER_GUIDE.md  symphonia_seek_notes.md  test.sh  theme.toml.example
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md
docs/api/: SKINS_REFERENCE.md
docs/architecture/: PLUGIN_SYSTEM_ARCHITECTURE.md
docs/guides/: CREATING_CUSTOM_SKINS.md  PLUGIN_INTEGRATION_GUIDE.md  SKINS_GALLERY.md  WINAMP_SKIN_CONVERSION.md
oneamp-cli/: Cargo.toml
oneamp-cli/src/: main.rs
oneamp-cli/tests/: integration_test.rs
oneamp-core/: Cargo.toml
oneamp-core/src/: audio_capture.rs  audio_thread_symphonia.rs  cpal_output.rs  eq_source.rs  equalizer.rs  lib.rs  rodio_output.rs  symphonia_player.rs
oneamp-core/src/plugins/: error.rs  loader.rs  mod.rs  registry.rs  traits.rs
oneamp-desktop/: Cargo.toml
oneamp-desktop/src/: album_art.rs  animations.rs  config.rs  control_buttons.rs  custom_widgets.rs  equalizer_display.rs  main.rs  main.rs.v0.6.2.backup  onedrop_visualizer.rs  platform_detection.rs  theme.rs  track_display.rs  ui_components.rs  visual_effects.rs  visualizer.rs  window_chrome.rs
oneamp-desktop/src/skins/: README.md  manager.rs  mod.rs  parser.rs  tests.rs  ui.rs
oneamp-plugins/: README.md
oneamp-plugins/dsp-reverb/: Cargo.toml
oneamp-plugins/dsp-reverb/src/: lib.rs
oneamp-plugins/input-aac/: Cargo.toml
oneamp-plugins/input-aac/src/: lib.rs
packaging/: build-deb.sh
skins/cyberpunk-neon/: skin.toml
skins/oneamp-dark/: skin.toml
skins/oneamp-light/: skin.toml
skins/retro-terminal/: skin.toml
skins/winamp5-classified/: skin.toml
src/: main.rs
