[workspace]
members = [
    "oneamp-cli",
    "oneamp-core",
    "oneamp-desktop",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Manus AI"]
license = "MIT"

[workspace.dependencies]
# Audio decoding
symphonia = { version = "0.5", features = ["mp3", "flac"] }

# Audio playback
rodio = "0.19"

# Error handling
anyhow = "1.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Channels
crossbeam-channel = "0.5"
