[workspace]
members = [
    "oneamp-cli",
    "oneamp-core",
    "oneamp-desktop",
]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2021"
authors = ["Manus AI"]
license = "MIT"

[workspace.dependencies]
# Audio decoding
symphonia = { version = "0.5", features = ["mp3", "flac", "vorbis", "wav", "pcm"] }

# Audio playback
rodio = "0.19"

# Error handling
anyhow = "1.0"

# Channels
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3          # Maximum optimization
lto = "thin"           # Link-Time Optimization (thin for reasonable compile time)
codegen-units = 1      # Better optimization across crates
strip = true           # Strip symbols automatically
panic = "abort"        # Smaller binary, no unwinding

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
