[package]
name = "oneamp-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OneAmp - Desktop GUI application"

[[bin]]
name = "oneamp"
path = "src/main.rs"

[dependencies]
# Core audio engine
oneamp-core = { path = "../oneamp-core" }

# GUI framework
eframe = "0.30"
egui = "0.30"

# Error handling
anyhow.workspace = true

# File dialogs
rfd = "0.15"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

# Random for shuffle
rand = "0.8"

# FFT for spectrum analyzer
rustfft = "6.2"

# Theme configuration
toml = "0.8"

# ID3 tag reading
lofty = "0.21"

# Image decoding for album art
image = "0.25"

# OneDrop (Milkdrop) visualizer integration
onedrop-engine = { path = "../../onedrop/onedrop-engine" }
onedrop-renderer = { path = "../../onedrop/onedrop-renderer" }
wgpu = "22.1"
pollster = "0.3"
